--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,11 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>co.edu.icesi.ci.thymeleaf2</groupId>
-	<artifactId>thymeleafValidation2</artifactId>
+	<groupId>co.edu.icesi.ci.thymeleaf</groupId>
+	<artifactId>thymeleafValidation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>thymeleafValidation2</name>
+	<name>thymeleafValidation</name>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
